--- a/chat/src/main/res/layout/activity_edit_share_info.xml
+++ b/chat/src/main/res/layout/activity_edit_share_info.xml
@@ -2,8 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/chat_bg"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
 
@@ -16,8 +14,7 @@
         <RelativeLayout
             android:id="@+id/rl_activity_edit_share_info_video_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true">
+            android:layout_height="wrap_content">
 
             <com.example.commonlibrary.manager.video.DefaultVideoPlayer
                 android:id="@+id/dvp_activity_edit_share_info_video"
