--- a/chat/src/main/res/layout/activity_photo_preview.xml
+++ b/chat/src/main/res/layout/activity_photo_preview.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:skin="http://schemas.android.com/android/skin"
+
     android:layout_height="match_parent">
 
 
@@ -19,6 +21,7 @@
         android:paddingRight="10dp">
 
         <ImageView
+            skin:enable="true"
             android:id="@+id/iv_activity_photo_preview_finish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
