--- a/chat/src/main/res/layout/fragment_person.xml
+++ b/chat/src/main/res/layout/fragment_person.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:skin="http://schemas.android.com/android/skin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/custom_color_app_bg"
     android:orientation="vertical"
-    android:tag="skin">
+    skin:enable="true">
 
 
     <RelativeLayout
