--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@mipmap/login_container_bg_01">
+    android:layout_height="match_parent">
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/login_container_bg_02" />
+
     <TextView
         android:id="@+id/tv_activity_splash_main_title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textSize="26sp"
-        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="中国地质大学（武汉）"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/white"
+        android:textSize="26sp" />
 
     <TextView
-
         android:id="@+id/tv_activity_splash_main_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="5dp"
         android:text="3"
         android:textColor="@color/white"
         android:textSize="18sp" />
