--- a/chat/src/main/res/layout/activity_login.xml
+++ b/chat/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <ImageView
@@ -10,45 +10,46 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="-50dp"
         android:layout_marginRight="-300dp"
-        android:scaleType="centerCrop"
-        android:background="@mipmap/de_bg"/>
+        android:background="@mipmap/de_bg"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130dp"
-        android:text="地倾"
         android:textColor="@color/base_color_text_blue"
-        android:textSize="45sp"/>
+        android:textSize="45sp"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginRight="20dp"
         android:orientation="vertical">
+
         <com.example.chat.view.AutoEditText
             android:id="@+id/aet_login_name"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:inputType="text"
+
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="bottom"
             android:hint="@string/login_username_hint"
+            android:inputType="text"
             android:maxLines="1"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
-            android:textSize="15sp"
-        />
+            android:textSize="15sp" />
+
         <com.example.chat.view.AutoEditText
             android:id="@+id/aet_login_password"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="bottom"
@@ -57,54 +58,50 @@
             android:maxLines="1"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
-            android:textSize="15sp"
-        />
+            android:textSize="15sp" />
+
         <Button
             android:id="@+id/btn_login_confirm"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_margin="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/btn_login_selector"
             android:gravity="center"
             android:text="@string/login"
             android:textColor="@color/base_color_text_white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
-        <!--<Button-->
-            <!--android:id="@+id/btn_login_main"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="48dp"-->
-            <!--android:layout_marginLeft="15dp"-->
-            <!--android:layout_marginRight="15dp"-->
-            <!--android:background="@drawable/btn_login_selector"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/login_main"-->
-            <!--android:textColor="@color/base_color_text_white"-->
-            <!--android:textSize="18sp"/>-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_login_forget"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/register_text1"
+                android:textSize="16sp" />
+
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/tv_login_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:enabled="true"
+                android:text="@string/register_text2"
+                android:textColor="@color/base_color_text_blue"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/tv_login_forget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="@string/register_text1"
-        android:textSize="16sp"/>
-    <TextView
-        android:enabled="true"
-        android:id="@+id/tv_login_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/register_text2"
-        android:textColor="@color/base_color_text_blue"
-        android:textSize="16sp"/>
 
 </RelativeLayout>
