--- a/commonlibrary/src/main/res/layout/item_list.xml
+++ b/commonlibrary/src/main/res/layout/item_list.xml
@@ -9,7 +9,8 @@
         android:id="@+id/tv_item_list_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
