--- a/chat/src/main/res/layout/activity_weather_info.xml
+++ b/chat/src/main/res/layout/activity_weather_info.xml
@@ -15,6 +15,7 @@
             android:id="@+id/tv_weather_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:text="城市"
             android:textColor="@color/base_color_text_white"
@@ -23,6 +24,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="10dp">
