--- a/chat/src/main/res/layout/fragment_person.xml
+++ b/chat/src/main/res/layout/fragment_person.xml
@@ -150,7 +150,7 @@
             android:drawablePadding="10dp"
             android:gravity="center"
             android:tag="skin"
-            android:text="留言通知"
+            android:text="提醒消息"
             android:textColor="@color/custom_color_text_main"
             android:textSize="16sp" />
 
@@ -197,6 +197,37 @@
             android:gravity="center"
             android:text="10"
             android:textColor="@color/white" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/rl_fragment_person_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/custom_color_app_content_bg"
+        android:padding="10dp"
+        android:tag="skin">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:tag="skin"
+            android:text="留言反馈"
+            android:textColor="@color/custom_color_text_main"
+            android:textSize="16sp" />
 
 
         <ImageView
