--- a/chat/src/main/res/layout/activity_photo_preview.xml
+++ b/chat/src/main/res/layout/activity_photo_preview.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:skin="http://schemas.android.com/android/skin"
-
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <com.example.commonlibrary.cusotomview.WrappedViewPager
-        android:id="@+id/vp_activity_photo_preview_display"
+    <com.example.chat.view.DragFrameLayout
+        android:id="@+id/dfl_activity_photo_preview_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content">
+
+        <com.example.commonlibrary.cusotomview.WrappedViewPager
+            android:id="@+id/vp_activity_photo_preview_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.example.chat.view.DragFrameLayout>
 
 
     <RelativeLayout
@@ -21,12 +26,12 @@
         android:paddingRight="10dp">
 
         <ImageView
-            skin:enable="true"
             android:id="@+id/iv_activity_photo_preview_finish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/ic_back"
+            skin:enable="true" />
 
 
         <TextView
