--- a/chat/src/main/res/layout/activity_user_detail.xml
+++ b/chat/src/main/res/layout/activity_user_detail.xml
@@ -66,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:visibility="gone"
                 app:tabMode="scrollable" />
         </com.google.android.material.appbar.AppBarLayout>
 
