--- a/chat/src/main/res/layout/item_activity_chat_receive_video.xml
+++ b/chat/src/main/res/layout/item_activity_chat_receive_video.xml
@@ -2,8 +2,8 @@
 <FrameLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <cn.jzvd.JZVideoPlayerStandard
+    <com.example.commonlibrary.manager.video.DefaultVideoPlayer
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:id="@+id/js_item_activity_chat_receive_video"/>
+        android:id="@+id/dvp_item_activity_chat_receive_video"/>
 </FrameLayout>
