--- a/chat/src/main/res/layout/item_activity_photo_preview.xml
+++ b/chat/src/main/res/layout/item_activity_photo_preview.xml
@@ -12,7 +12,7 @@
     <uk.co.senab.photoview.PhotoView
         android:id="@+id/pv_item_activity_photo_preview_display"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
