--- a/commonlibrary/src/main/res/values/styles.xml
+++ b/commonlibrary/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:windowBackground">@color/transparent</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="dialog_default_style" parent="@android:style/Theme.Dialog">
