--- a/commonlibrary/src/main/res/values/color_item.xml
+++ b/commonlibrary/src/main/res/values/color_item.xml
@@ -161,7 +161,7 @@
     <color name="amber_100">#ffe5a9</color>
     <color name="amber_200">#ffdc8a</color>
     <color name="amber_300">#ffd26a</color>
-    <color name="amber_400">#ffc949</color>
+    <color name="amber_400">#f3be42</color>
     <color name="amber_500">#ffbf29</color>
     <color name="amber_600">#fbb318</color>
     <color name="amber_700">#eda20c</color>
