--- a/chat/src/main/res/layout/activity_search_friend.xml
+++ b/chat/src/main/res/layout/activity_search_friend.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:gravity="center_vertical"
-        android:paddingBottom="15dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/et_search_friend_input"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/btn_search_friend"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:hint="请输入用户名"
-            android:paddingLeft="10dp"/>
+            android:hint="请输入账号或姓名"
+            android:textSize="14sp" />
 
-        <Button
-            android:id="@+id/btn_search_friend"
+        <TextView
+            android:id="@+id/tv_activity_search_friend_query"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/btn_login_selector"
             android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="5dp"
             android:text="查询"
-            android:textColor="@color/base_color_bg_gray"/>
-    </RelativeLayout>
+            android:textColor="@color/base_color_bg_gray" />
+    </LinearLayout>
+
     <com.example.commonlibrary.baseadapter.SuperRecyclerView
         android:id="@+id/srcv_search_friend_display"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
