--- a/music/src/main/res/layout/view_fragment_holder_header_view.xml
+++ b/music/src/main/res/layout/view_fragment_holder_header_view.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:paddingLeft="20dp"
     android:paddingTop="10dp"
     android:paddingRight="20dp">
 
@@ -19,7 +18,7 @@
         android:id="@+id/vpi_view_fragment_holder_header_view_indicator"
         android:layout_width="210dp"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
+        android:layout_marginLeft="70dp"
         android:gravity="center_vertical"
         app:tabNormalColor="@color/white"
         app:tabSelectedColor="@color/orange_500"
